# modern_web_development_with_fastapi

./: README.md
fastapi_book/: pyproject.toml
fastapi_book/first_five_create_a_simple_web/: main.py
fastapi_book/first_five_create_a_simple_web/data/: creature.py  init.py
fastapi_book/first_five_create_a_simple_web/fake/: creature.py  explorer.py
fastapi_book/first_five_create_a_simple_web/models/: creature.py  explorer.py
fastapi_book/first_five_create_a_simple_web/service/: creature.py  explorer.py
fastapi_book/first_five_create_a_simple_web/test/unit/service/: test_creature.py
fastapi_book/first_five_create_a_simple_web/web/: creature.py  explorer.py
fastapi_book/first_one/: dateTime.py
fastapi_book/first_three_dependencies/: dependency1.py
fastapi_book/first_two/: data.py  models.py
first_one/: hello.py  request.py  testing_async.py
first_three_dependencies/: dependency2.py
first_two/: web.py
