[tool.poetry]
name = "fastapi-book"
version = "0.1.0"
description = ""
authors = ["Muhammad_Hammad_Shah <Hammad4455shah5544@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.111.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
